[package]
name = "doorsensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rppal = "0.14.1"
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
email = { git = "https://github.com/lkbhargav/emailer.git" }