[package]
name = "doorsensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email = { git = "https://github.com/lkbhargav/emailer.git", rev = "77745133fe61425d005ed17940b7f23a1ad2aa34" }
anyhow = "1.0.75"
rppal = "0.14.1"
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.24"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.133"
